<resources>
    <string name="app_name">sachinprofile</string>
    <string name="id">ID</string>
    <string name="id_value">1</string>
    <string name="name">Name</string>
    <string name="name_value">Sachin Lal</string>
    <string name="salary">Salary</string>
    <string name="salary_value">$$$</string>
    <string name="age">Age</string>
    <string name="age_value">some_value</string>
    <string name="content_description">Profile Image</string>
</resources>
