<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-1dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_profile" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:stretchColumns="1">

        <TableRow android:background="@drawable/border">

            <TextView
                android:background="@drawable/border"
                android:padding="3dp"
                android:text="@string/id" />

            <TextView
                android:layout_gravity="center"
                android:padding="3dp"
                android:text="@string/id_value" />
        </TableRow>

        <TableRow android:background="@drawable/border">

            <TextView
                android:background="@drawable/border"
                android:padding="3dp"
                android:text="@string/name" />

            <TextView
                android:layout_gravity="center"
                android:padding="3dip"
                android:text="@string/name_value" />
        </TableRow>

        <TableRow android:background="@drawable/border">

            <TextView
                android:background="@drawable/border"
                android:padding="3dp"
                android:text="@string/salary" />

            <TextView
                android:layout_gravity="center"
                android:padding="3dp"
                android:text="@string/salary_value" />
        </TableRow>

        <TableRow android:background="@drawable/border">

            <TextView
                android:background="@drawable/border"
                android:padding="3dp"
                android:text="@string/age" />

            <TextView
                android:layout_gravity="center"
                android:padding="3dip"
                android:text="@string/age_value" />

        </TableRow>
    </TableLayout>

</RelativeLayout>